# Aura_Check

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  script.py
Scripts/: main.ipynb  onehot_columns.pkl  onehot_columns1.pkl
models/: xgc_model1_anxiety.pkl  xgc_model1_depression.pkl  xgc_model1_stress.pkl
static/css/: result.css  style.css
templates/: index.html  quiz.html  result.html
